single-node/svc.yaml
---
# Source: kafka/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: message-broker-kafka
  namespace: "nexus-platform"
  labels:
    app.kubernetes.io/instance: message-broker
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kafka
    app.kubernetes.io/version: 3.8.1
    helm.sh/chart: kafka-30.1.8
    app.kubernetes.io/component: kafka
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: tcp-client
      port: 9092
      protocol: TCP
      targetPort: client
      nodePort: null
  selector:
    app.kubernetes.io/instance: message-broker
    app.kubernetes.io/name: kafka
    app.kubernetes.io/part-of: kafka
