single-node/networkpolicy.yaml
---
# Source: kafka/templates/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: message-broker-kafka
  namespace: "nexus-platform"
  labels:
    app.kubernetes.io/instance: message-broker
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kafka
    app.kubernetes.io/version: 3.8.1
    helm.sh/chart: kafka-30.1.8
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: message-broker
      app.kubernetes.io/name: kafka
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    # Allow client connections
    - ports:
        - port: 9092
        - port: 9094
        - port: 9093
